# synergie_global

./: .env.example  .gitignore  README.md  notebook.ipynb  pyproject.toml  transcription.json
app/: __main__.py
app/configs/: __init__.py  settings.py
app/models/: appointment.py  conversation.py
app/prompts/: conversation.py
app/services/: audio_service.py  conversation_service.py
samples/: dialog.xlsx
src/: __init__.py  __main__.py  configs.py  cores.py  prompts.py  schemas.py  tools.py
