[project]
name = "synergie-global"
version = "0.1.0"
description = "AI Engineer Test at SynergieGlobal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.30.1",
    "openai-whisper",
    "openai>=1.102.0",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.11",
    "torch>=2.8.0",
    "whisperx",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "pydantic>=2.11.7",
    "langchain-groq>=0.3.7",
    "typer>=0.16.1",
    "pydantic-settings>=2.10.1",
    "openpyxl>=3.1.5",
]

[tool.uv.sources]
whisperx = { git = "https://github.com/m-bain/whisperx.git" }
openai-whisper = { git = "https://github.com/openai/whisper.git" }
